<resources>
    <string name="task1">POI</string>
    <string name="app_name">Android cource</string>
    <string name="button1_1">Task 1.1</string>
    <string name="button1_2">Task 1.2</string>
    <string name="button1_3">Task 1.3</string>
    <string name="button2_1">Task 2.1</string>
    <string name="button2_2">Task 2.2</string>
    <string name="button2_3">Task 2.3</string>
    <string name="button3_1">Task 3.1</string>
    <string name="button3_2">Task 3.2</string>
    <string name="button3_3">Task 3.3</string>
    <string name="button4_1">Task 4.1</string>
    <string name="button4_2">Task 4.2</string>
    <string name="button4_3">Task 4.3</string>
    <string name="button5">Task 5</string>
    <string name="task1_p1">Attractions</string>
    <string name="task1_p2">Dining</string>
    <string name="task1_p3">Education</string>
    <string name="task1_p4">Family</string>
    <string name="task1_p5">Health</string>
    <string name="task1_p6">Office</string>
    <string name="task1_p7">Promotions</string>
    <string name="task1_p8">Radio</string>
    <string name="task1_p9">Recipes</string>
    <string name="task1_p10">Sports</string>
    <string name="task2_title">Title</string>
    <string name="task2_price">Price</string>
    <string name="task2_location">Location</string>
    <string name="task2_description">Description</string>
    <string name="task2_inv">Inventory</string>
    <string name="task2_weight">Weight</string>
    <string name="task3_sign_in">Sign in</string>
    <string name="task3_email">Email</string>
    <string name="task3_password">Password</string>
    <string name="task3_remember">Remember</string>
    <string name="task3_fp">Forgot password?</string>
    <string name="task3_jsi">* Just sign in</string>
    <string name="task4_header">Android</string>
    <string name="task4_n1">125</string>
    <string name="task4_n2">20K</string>
    <string name="task4_n3">22</string>
    <string name="task4_n1_2">Posts</string>
    <string name="task4_n2_2">Followers</string>
    <string name="task4_n3_2">Following</string>
    <string name="task4_username">Username</string>
    <string name="task4_address">Address</string>
    <string name="task4_description">Description</string>
    <string name="task4_dir">DIRECTIONS</string>
    <string name="task4_call">CALL</string>
    <string name="task4_savedir">SAVE</string>
    <string name="task4_website">WEBSITE</string>
    <string name="task5_n1">Certificated</string>
    <string name="task5_n2">Layouts</string>
    <string name="task5_n3">Views</string>
    <string name="task5">Android cource</string>
</resources>