<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:onClick="onClick1_1Button"
        android:id="@+id/button1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/button1_2"
        app:layout_constraintTop_toTopOf="@id/button1_2"
        android:text="@string/button1_1"
        />
    <Button
        android:onClick="onClick1_2Button"
        android:id="@+id/button1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button1_2"
        />
    <Button
        android:onClick="onClick1_3Button"
        android:id="@+id/button1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/button1_2"
        app:layout_constraintTop_toTopOf="@id/button1_1"
        android:text="@string/button1_3"
        />

    <Button
        android:onClick="onClick2_1Button"
        android:id="@+id/button2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/button2_2"
        app:layout_constraintTop_toBottomOf="@id/button1_2"
        android:text="@string/button2_1"
        />
    <Button
        android:onClick="onClick2_2Button"
        android:id="@+id/button2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/button1_2"
        app:layout_constraintTop_toBottomOf="@id/button1_2"
        android:text="@string/button2_2"
        />
    <Button
        android:onClick="onClick2_3Button"
        android:id="@+id/button2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/button2_2"
        app:layout_constraintTop_toBottomOf="@id/button1_2"
        android:text="@string/button2_3"
        />
    <Button
        android:onClick="onClick3_1Button"
        android:id="@+id/button3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/button3_2"
        app:layout_constraintTop_toBottomOf="@id/button2_2"
        android:text="@string/button3_1"
        />
    <Button
        android:onClick="onClick3_2Button"
        android:id="@+id/button3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/button2_2"
        app:layout_constraintTop_toBottomOf="@id/button2_2"
        android:text="@string/button3_2"
        />
    <Button
        android:onClick="onClick3_3Button"
        android:id="@+id/button3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/button3_2"
        app:layout_constraintTop_toBottomOf="@id/button2_2"
        android:text="@string/button3_3"
        />



</androidx.constraintlayout.widget.ConstraintLayout>