<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task_2_3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100pt"
        android:id="@+id/photo"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_drawing"
            android:scaleType="fitXY" />
        <ImageView
            android:layout_width="15pt"
            android:layout_height="15pt"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5pt"
            android:layout_marginBottom="5pt"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/title"
        android:layout_marginTop="10pt"
        android:layout_marginStart="7pt"
        android:layout_marginEnd="7pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task2_title"
        android:textColor="@color/grey"
        android:layout_below="@+id/photo"/>
    <EditText
        android:id="@+id/price"
        android:layout_marginTop="10pt"
        android:layout_below="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:text="@string/task2_price"
        android:textColor="@color/grey"
        />
    <EditText
        android:layout_alignEnd="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="10pt"
        android:layout_toEndOf="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7pt"
        android:text="@string/task2_location"
        android:textColor="@color/grey"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        />
    <EditText
        android:id="@+id/description"
        android:layout_alignStart="@id/price"
        android:layout_alignEnd="@id/title"
        android:layout_below="@+id/price"
        android:layout_marginTop="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task2_description"
        android:textColor="@color/grey"/>

    <EditText
        android:layout_alignEnd="@id/description"
        android:layout_marginTop="10pt"
        android:layout_below="@id/description"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:text="@string/task2_inv"
        android:textColor="@color/grey"
        />

    <EditText
        android:layout_alignStart="@id/description"
        android:layout_marginTop="10pt"
        android:layout_below="@id/description"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:text="@string/task2_weight"
        android:textColor="@color/grey"
        />

</RelativeLayout>