<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/task3_sign_in"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="32sp"
        android:text="@string/task3_email"
        android:textColor="@color/grey2"
        android:background="@drawable/ic_task3_text_bc"
        android:layout_below="@id/sign_in"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="32sp"
        android:text="@string/task3_password"
        android:textColor="@color/grey2"
        android:background="@drawable/ic_task3_text_bc"
        android:layout_below="@id/email"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_marginTop="30dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/password"
        android:layout_alignStart="@id/password"/>
    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task3_remember"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/password"
        android:layout_alignTop="@id/checkbox"
        android:layout_toEndOf="@id/checkbox"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task3_fp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/password"
        android:layout_alignTop="@id/remember"
        android:layout_alignEnd="@id/password"/>
    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_task3_bb"
        android:text="@string/task3_sign_in"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/remember" />
    <TextView
        android:id="@+id/jsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task3_jsi"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>