<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondActivity">
    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:src="@drawable/ic_drawing"
        android:scaleType="fitXY"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@id/photo"/>
    <EditText
        android:id="@+id/title"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task2_title"
        android:textColor="@color/grey"
        android:layout_below="@+id/photo"
        app:layout_constraintTop_toBottomOf="@id/photo"
        app:layout_constraintBottom_toTopOf="@id/price"/>
    <EditText
        app:layout_constraintHorizontal_weight="2"
        android:layout_width="0dp"
        android:id="@+id/price"
        android:layout_alignStart="@+id/title"
        android:layout_height="wrap_content"
        android:text="@string/task2_price"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/location"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@id/description" />
    <EditText
        app:layout_constraintHorizontal_weight="5"
        android:layout_width="0dp"
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:text="@string/task2_location"
        android:textColor="@color/grey"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        app:layout_constraintLeft_toRightOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price"
        app:layout_constraintRight_toRightOf="@id/title" />
    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task2_description"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toLeftOf="@id/price"
        app:layout_constraintRight_toRightOf="@id/location"
        app:layout_constraintBottom_toTopOf="@id/inventory"/>
    <EditText
        android:id="@+id/inventory"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/task2_inv"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintLeft_toLeftOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent" />
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/task2_weight"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintRight_toRightOf="@id/description"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>