<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/task3_sign_in"
        android:textColor="@color/black"
        android:paddingTop="50dp"
        android:paddingStart="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="35dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10pt"
            android:textSize="32sp"
            android:text="@string/task3_email"
            android:textColor="@color/grey2"
            android:background="@drawable/ic_task3_text_bc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10pt"
            android:textSize="32sp"
            android:text="@string/task3_password"
            android:textColor="@color/grey2"
            android:background="@drawable/ic_task3_text_bc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task3_remember"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task3_fp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_task3_bb"
            android:text="@string/task3_sign_in"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/task3_jsi"/>
    </FrameLayout>
</LinearLayout>