<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/task1"/>
    </androidx.appcompat.widget.Toolbar>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_folder_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p1"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_local_dining_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p2"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_school_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p3"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_people_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p4"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_favorite_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p5"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_business_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p6"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p7"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_radio_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p8"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_book_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p9"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_baseline_directions_bike_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:tint="@color/grey"
            android:layout_gravity="bottom" />
        <TextView
            android:text="@string/task1_p10"
            android:paddingLeft="35dp"
            android:textSize="27sp"
            android:textColor="@color/grey"
            android:layout_gravity="bottom" />
    </TableRow>
    <TableRow
        android:layout_weight="2"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
</TableLayout>